<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.vvk78.perceptnet.commons</groupId>
    <artifactId>perceptnet-commons</artifactId>
    <version>1.5.0</version>
    <name>Perceptnet commons parent project</name>

    <description>Set of common utilities and tools used in perceptnet</description>
    <url>https://github.com/vvk78/perceptnet-commons.git</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://choosealicense.com/licenses/mit/</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>vvk78</id>
            <name>Vladimir Korovkin</name>
            <email>vkorovkin@gmail.com</email>
        </developer>
    </developers>
    <scm>
        <connection>git@github.com:vvk78/perceptnet-commons.git</connection>
        <developerConnection>git@github.com:vvk78/perceptnet-commons.git</developerConnection>
        <url>https://github.com/vvk78/perceptnet-commons.git</url>
    </scm>

    <packaging>pom</packaging>

    <modules>
        <module>abstractions</module>
        <module>commons-api</module>
        <module>resource-str</module>
        <module>json-io</module>
        <module>utils</module>
        <module>timeseries</module>
        <module>utilsj18plus</module>
        <module>reflection</module>
        <module>beanprocessing</module>
        <module>restclient-base</module>
        <module>restclient-base-dto</module>
        <module>restclient-onapacheclient</module>
        <module>restclient-conv-onjackson</module>
        <module>restproxy</module>
        <module>tests</module>
        <module>validation-abstractions</module>
        <module>validation-processor</module>
    </modules>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>22.0</version>
            </dependency>
            <dependency>
                <groupId>com.cedarsoftware</groupId>
                <artifactId>json-io</artifactId>
                <version>4.10.0</version>
            </dependency>
            <!-- test dependencies -->
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>7.7.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>pn-commons-${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18</version>
                <configuration>
                    <groups>unit</groups>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.sonatype.plugins</groupId>-->
            <!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
            <!--                <version>1.6.7</version>-->
            <!--                <extensions>true</extensions>-->
            <!--                <configuration>-->
            <!--                    <serverId>ossrh</serverId>-->
            <!--                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>-->
            <!--                    <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>CI</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.18</version>
                        <configuration>
                            <groups>unit,integration,selenium</groups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>src</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>javadoc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <additionalparam>-Xdoclint:none</additionalparam>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>


        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <!-- Prevent gpg from using pinentry programs. Fixes: gpg: signing
                                        failed: Inappropriate ioctl for device -->
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>${project.deployment.server_url}</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>


    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.deployment.server_url>https://s01.oss.sonatype.org</project.deployment.server_url>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>${project.deployment.server_url}/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>${project.deployment.server_url}/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

<!--    <distributionManagement>-->
<!--        <snapshotRepository>-->
<!--            <id>ossrh</id>-->
<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
<!--        </snapshotRepository>-->
<!--        <repository>-->
<!--            <id>ossrh</id>-->
<!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
<!--        </repository>-->
<!--    </distributionManagement>-->


</project>
